--- a/_config.yml
+++ b/_config.yml
@@ -472,6 +472,7 @@ webp:
   img_dir: 
     - "/assets/img"
     - "/assets/logo"
+    - "/assets/img/emoji/unicode"
 
   # Whether to search in nested directories or not
   nested: true
@@ -483,7 +484,7 @@ webp:
   gifs: [".gif"]
 
   # Set to true to always regenerate existing webp files
-  regenerate: true
+  regenerate: false
 
   # Local path to the WebP utilities to use (relative or absolute)
   # Omit or leave as nil to use the utilities shipped with the gem, override only to use your local install
