--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+RewriteEngine on
+
 ####################
 # Attempt to redirect images to WebP if one exists 
 # and the client supports the file format
