--- a/_config.yml
+++ b/_config.yml
@@ -469,10 +469,7 @@ webp:
 
   # List of directories containing images to optimize, nested directories will only be checked if `nested` is true
   # By default the generator will search for a folder called `/img` under the site root and process all jpg, png and tiff image files found there.
-  img_dir: 
-    - "/assets/img"
-    - "/assets/logo"
-    - "/assets/img/emoji/unicode"
+  img_dir: ["/assets/img", "/assets/logos", "/assets/img/emoji/unicode"]
 
   # Whether to search in nested directories or not
   nested: true
