--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,140 @@ RewriteCond %1\.webp -f
 RewriteRule (.+)\.(jpe?g|png|gif|ti?f)$ $1.webp [T=image/webp,E=accept:1]
 
 AddType image/webp .webp
+
+# ----------------------------------------------------------------------
+# | ETags                                                              |
+# ----------------------------------------------------------------------
+ 
+# Remove `ETags` as resources are sent with far-future expires headers.
+#
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/ETag
+# https://developer.yahoo.com/performance/rules.html#etags
+# https://tools.ietf.org/html/rfc7232#section-2.3
+ 
+# `FileETag None` doesn't work in all cases.
+<IfModule mod_headers.c>
+    Header unset ETag
+</IfModule>
+ 
+FileETag None
+ 
+# ----------------------------------------------------------------------
+# | Cache expiration                                                   |
+# ----------------------------------------------------------------------
+ 
+# Serve resources with a far-future expiration date.
+#
+# (!) If you don't control versioning with filename-based cache busting, you
+# should consider lowering the cache times to something like one week.
+#
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Cache-Control
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Expires
+# https://httpd.apache.org/docs/current/mod/mod_expires.html
+ 
+<IfModule mod_expires.c>
+ 
+    ExpiresActive on
+    ExpiresDefault                                      "access plus 1 hour"
+ 
+  # CSS
+ 
+    ExpiresByType text/css                              "access plus 1 day"
+ 
+ 
+  # Data interchange
+ 
+    ExpiresByType application/atom+xml                  "access plus 1 hour"
+    ExpiresByType application/rdf+xml                   "access plus 1 hour"
+    ExpiresByType application/rss+xml                   "access plus 1 hour"
+ 
+    ExpiresByType application/json                      "access plus 0 seconds"
+    ExpiresByType application/ld+json                   "access plus 0 seconds"
+    ExpiresByType application/schema+json               "access plus 0 seconds"
+    ExpiresByType application/geo+json                  "access plus 0 seconds"
+    ExpiresByType application/xml                       "access plus 0 seconds"
+    ExpiresByType text/calendar                         "access plus 0 seconds"
+    ExpiresByType text/xml                              "access plus 0 seconds"
+ 
+ 
+  # Favicon (cannot be renamed!) and cursor images
+ 
+    ExpiresByType image/vnd.microsoft.icon              "access plus 1 week"
+    ExpiresByType image/x-icon                          "access plus 1 week"
+ 
+  # HTML
+ 
+    ExpiresByType text/html                             "access plus 0 seconds"
+ 
+ 
+  # JavaScript
+ 
+    ExpiresByType application/javascript                "access plus 1 week"
+    ExpiresByType application/x-javascript              "access plus 1 week"
+    ExpiresByType text/javascript                       "access plus 1 week"
+ 
+ 
+  # Manifest files
+ 
+    ExpiresByType application/manifest+json             "access plus 1 day"
+    ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
+    ExpiresByType text/cache-manifest                   "access plus 0 seconds"
+ 
+ 
+  # Markdown
+ 
+    ExpiresByType text/markdown                         "access plus 0 seconds"
+ 
+ 
+  # Media files
+ 
+    ExpiresByType audio/ogg                             "access plus 1 week"
+    ExpiresByType image/apng                            "access plus 1 week"
+    ExpiresByType image/bmp                             "access plus 1 week"
+    ExpiresByType image/gif                             "access plus 1 week"
+    ExpiresByType image/jpeg                            "access plus 1 week"
+    ExpiresByType image/png                             "access plus 1 week"
+    ExpiresByType image/svg+xml                         "access plus 1 week"
+    ExpiresByType image/webp                            "access plus 1 week"
+    ExpiresByType video/mp4                             "access plus 1 week"
+    ExpiresByType video/ogg                             "access plus 1 week"
+    ExpiresByType video/webm                            "access plus 1 week"
+ 
+ 
+  # WebAssembly
+ 
+    ExpiresByType application/wasm                      "access plus 1 week"
+ 
+ 
+  # Web fonts
+ 
+    # Collection
+    ExpiresByType font/collection                       "access plus 1 week"
+ 
+    # Embedded OpenType (EOT)
+    ExpiresByType application/vnd.ms-fontobject         "access plus 1 day"
+    ExpiresByType font/eot                              "access plus 1 day"
+ 
+    # OpenType
+    ExpiresByType font/opentype                         "access plus 1 day"
+    ExpiresByType font/otf                              "access plus 1 day"
+ 
+    # TrueType
+    ExpiresByType application/x-font-ttf                "access plus 1 day"
+    ExpiresByType font/ttf                              "access plus 1 day"
+ 
+    # Web Open Font Format (WOFF) 1.0
+    ExpiresByType application/font-woff                 "access plus 1 day"
+    ExpiresByType application/x-font-woff               "access plus 1 day"
+    ExpiresByType font/woff                             "access plus 1 day"
+ 
+    # Web Open Font Format (WOFF) 2.0
+    ExpiresByType application/font-woff2                "access plus 1 day"
+    ExpiresByType font/woff2                            "access plus 1 day"
+ 
+ 
+  # Other
+ 
+    ExpiresByType text/x-cross-domain-policy            "access plus 1 day"
+ 
+</IfModule>
