remove config for google tag manager

--- a/_config.yml
+++ b/_config.yml
@@ -183,13 +183,13 @@ site-js:
 #################################
 
 # Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-#gtag: "G-XXXXXXXXXX"
+gtag: "G-SLV0L9BQDX"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
 
 # Google Tag Manager ID
-gtm: "G-SLV0L9BQDX"
+#gtm: "GTM-N8TZ9W6F"
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
