--- a/_config.yml
+++ b/_config.yml
@@ -404,7 +404,6 @@ plugins:
   - 'jekyll-commonmark-ghpages'
   - 'jekyll-gallery-generator'
   - "jekyll-webp"
-  - "Jekyll::AuthorTag"
 
 collections:
   authors:
@@ -450,6 +449,15 @@ compress_html:
   ignore:
     envs: []
     
+compress_html:
+  clippings: all
+  comments: [""]
+  endings: [html, head, body, li, dt, dd, rt, rp, optgroup, option, colgroup, caption, thead, tbody, tfoot, tr, td, th]
+  profile: false
+  blanklines: false
+  ignore:
+    envs: []
+
 ############################################################
 # Site configuration for the WebP Generator Plugin
 # The values here represent the defaults if nothing is set
