--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -19,5 +19,14 @@ lilian schwetz:
  - twitter:  ""
  - mastodon: ""
  - instagram: ""
- - bio: |"
-   hewoo"
+ - bio: | 
+   hewoo
+isabelle schwetz: 
+ - avitar: /assets/authors/lilian.jpg
+ - email: lilian@schwetz.au
+ - facebook: ""
+ - linkedin: ""
+ - twitter:  ""
+ - mastodon: ""
+ - instagram: ""
+ - bio: ""
