--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -10,10 +10,10 @@ stephen schwetz:
       Welcome to my little corner of the internet. On this site, you will find everything from the braindumps of technical data to braindumps of things that I need to take off my head to keep sane.
       I enjoy technology, IoT and photography. I have shared care arrangements for my two girls with my ex-partner, with the eldest being with me 50% of the time. The younger wants to spend more time with her mum, so I have her three days per fortnight.
       
-      All photographs shown on this site’s home screen have been taken by myself."
+      All photographs shown on this site’s home screen have been taken by myself.
 lilian schwetz: 
  - avitar: /assets/authors/lilian.jpg
- - email: "lilian@schwetz.au"
+ - email: lilian@schwetz.au
  - facebook: ""
  - linkedin: ""
  - twitter:  ""
@@ -23,7 +23,7 @@ lilian schwetz:
    hewoo
 isabelle schwetz: 
  - avitar: /assets/authors/lilian.jpg
- - email: lilian@schwetz.au
+ - email: isabelle@schwetz.au
  - facebook: ""
  - linkedin: ""
  - twitter:  ""
