--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -19,8 +19,7 @@ lilian schwetz:
  - twitter:  ""
  - mastodon: ""
  - instagram: ""
- - bio: | 
-   hewoo
+ - bio: hewoo
 isabelle schwetz: 
  - avitar: /assets/authors/lilian.jpg
  - email: isabelle@schwetz.au
