--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -1,6 +1,6 @@
 <Files *>
   AuthType DIGEST
-  AuthName "Private Documents"
+  AuthName "schwetz.au"
   AuthDigestDomain "schwetz.au"
   AuthDigestProvider file
   AuthUserFile "/home/jekyll/_digestpw/htdigest"
