--- a/_config.yml
+++ b/_config.yml
@@ -378,6 +378,7 @@ emoji:
 
 
 # Exclude these files from production site
+include:
 exclude:
   - CHANGELOG.md
   - CNAME
@@ -386,7 +387,7 @@ exclude:
   - LICENSE
   - README.md
   - screenshot.png
-  - docs/
+#  - docs/
   - vendor/
 
 plugins:
