Revert "remove jekyll-titles-from-headings"
This reverts commit 4a3744f19ea91536445d0509e437fbc4fcaa4767.

--- a/_config.yml
+++ b/_config.yml
@@ -398,6 +398,7 @@ plugins:
   - "jekyll-redirect-from"
   - "premonition"
   - "jekyll-target-blank"
+  - "jekyll-titles-from-headings"
   - "jekyll-postfiles"
   - "classifier-reborn"
   - "jekyll-remote-theme"
