--- a/_config.yml
+++ b/_config.yml
@@ -419,6 +419,7 @@ plugins:
   - 'jekyll-gallery-generator'
   - "jekyll-webp"
   - 'jekyll-toc'
+  - 'kramdown-parser-gfm'
 
 collections:
   authors:
