--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -7,7 +7,7 @@ About:
   - Lilian: "about-lilian"
   - Stupid Ellie: "ellie"
 Memes:
-  - Bert is Evil: memes/bert-is-evil/
+  - Bert is Evil: "memes/bert-is-evil"
 Projects:
   - Neurodiversity in Australia: "https://neurodiversity-in.au"
 Galleries: "galleries"
