--- a/_config.yml
+++ b/_config.yml
@@ -323,7 +323,8 @@ pagination:
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
-  - scope:
+  - 
+    scope:
       path: "/kb"
       type: ""
     values:
@@ -332,7 +333,8 @@ defaults:
       social-share: "true"
       permalink: "/kb/:title/"
       readtime: true
-  - scope:
+  - 
+    scope:
       path: "/journal/stephen"
       type: ""
     values:
@@ -350,7 +352,7 @@ defaults:
       social-share: "false"
       permalink: ":year/:month/:day/:title/"
       readtime: true
-   -
+  -
     scope:
       path: "/memes"
       type: ""
@@ -359,7 +361,7 @@ defaults:
       comments: "false"
       social-share: "false"
       permalink: ":title/"
-   -
+  -
     scope:
       path: "/articles"
       type: ""
