--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -1,13 +1,16 @@
-Weather: "weather"
 Tools:
   - Knowledge Base: "kb"
+  - Weather: "weather"
 About: 
   - Us: "about-us"
   - Stephen: "about-stephen"
   - Lilian: "about-lilian"
   - Stupid Ellie: "ellie"
-Memes:
-  - Bert is Evil: "memes/bert-is-evil"
+
+Fun Stuff:
+  - Memes:
+    - Bert is Evil: "memes/bert-is-evil"
+    - Emma's Memes: "galleries/emmas-memes"
 Projects:
   - Neurodiversity in Australia: "https://neurodiversity-in.au"
 Galleries: "galleries"
