--- a/_config.yml
+++ b/_config.yml
@@ -427,6 +427,7 @@ plugins:
   - 'jekyll-gallery-generator'
   - "jekyll-webp"
   - 'kramdown-parser-gfm'
+  - 'classifier-reborn'
 
 collections:
   authors:
