--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -6,6 +6,7 @@ About:
   - Us: "about-us"
   - Stephen: "about-stephen"
   - Lilian: "about-lilian"
+  - Hunter: "hunter"
   - Stupid Ellie: "ellie"
 
 Fun Stuff:
@@ -14,3 +15,7 @@ Fun Stuff:
 Projects:
   - Neurodiversity in Australia: "https://neurodiversity-in.au"
 Galleries: "galleries"
+  - Ellie the Stupid: "galleries/ellie-the-stupid"
+  - Hunter the Elegant: "galleries/hunter-the-elegant"
+  - Emma's Memes: "galleries/emmas-memes"
+  
