Update Navbar Links

--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -14,7 +14,7 @@ Fun Stuff:
   - Emma's Memes: "galleries/emmas-memes"
 Projects:
   - Neurodiversity in Australia: "https://neurodiversity-in.au"
-Galleries: "galleries"
+Galleries: 
   - Ellie the Stupid: "galleries/ellie-the-stupid"
   - Hunter the Elegant: "galleries/hunter-the-elegant"
   - Emma's Memes: "galleries/emmas-memes"
