Fix Caps for Emma's Meme Gallery

--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -17,5 +17,5 @@ Projects:
 Galleries: 
   - Ellie the Stupid: "galleries/ellie-the-stupid"
   - Hunter the Elegant: "galleries/hunter-the-elegant"
-  - Emma's Memes: "galleries/emmas-memes"
+  - Emma's Memes: "galleries/Emmas-memes"
   
