--- a/_data/navbar-links.yaml
+++ b/_data/navbar-links.yaml
@@ -8,10 +8,12 @@ About:
   - Lilian: "about-lilian"
   - Hunter: "hunter"
   - Stupid Ellie: "ellie"
-
 Fun Stuff:
   - Bert is Evil: "memes/bert-is-evil"
   - Emma's Memes: "galleries/emmas-memes"
+SDR Projects
+  - Listen to Stephen's Scanner: "scanner/listen-to-scanner"
+  
 Projects:
   - Neurodiversity in Australia: "https://neurodiversity-in.au"
 Galleries: 
